Ajout fonction configuration timer

--- a/Act1/MDK-ARM/Project.uvprojx
+++ b/Act1/MDK-ARM/Project.uvprojx
@@ -407,6 +407,11 @@
               <FileType>1</FileType>
               <FilePath>..\MyDrivers\MyTimer.c</FilePath>
             </File>
+            <File>
+              <FileName>MyTimer.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\MyDrivers\MyTimer.h</FilePath>
+            </File>
           </Files>
         </Group>
         <Group>
@@ -765,7 +770,7 @@
           </ArmAdsMisc>
           <Cads>
             <interw>1</interw>
-            <Optim>4</Optim>
+            <Optim>1</Optim>
             <oTime>0</oTime>
             <SplitLS>0</SplitLS>
             <OneElfS>1</OneElfS>
@@ -859,6 +864,11 @@
               <FileName>MyTimer.c</FileName>
               <FileType>1</FileType>
               <FilePath>..\MyDrivers\MyTimer.c</FilePath>
+            </File>
+            <File>
+              <FileName>MyTimer.h</FileName>
+              <FileType>5</FileType>
+              <FilePath>..\MyDrivers\MyTimer.h</FilePath>
             </File>
           </Files>
         </Group>
